# auto-edge-server

./: .env.example  .gitignore  Dockerfile  celery_app.py  config.py  pyproject.toml  requirements.txt
app/: __init__.py  config.py  dependencies.py  main.py
app/api/: __init__.py  router.py
app/api/v1/: __init__.py  analytics.py  conversion.py  health.py  models.py  ota.py  registry.py
app/core/: __init__.py  error_handlers.py  exceptions.py
app/models/: __init__.py  analytics.py  base.py  conversion.py  device.py  model.py
app/repositories/: __init__.py  analytics_repo.py  base.py  conversion_repo.py  device_repo.py  filesystem_repo.py  model_registry_repo.py
app/repositories/sqlite/: __init__.py  analytics.py  base.py  conversion.py  device.py  model_registry.py
app/schemas/: __init__.py  analytics.py  conversion.py  ota.py  registry.py  requests.py  responses.py
app/services/: __init__.py  analytics_service.py  conversion_service.py  file_service.py  ota_service.py  registry_service.py
converters/: coreml_converter.py  pytorch_loader.py
tasks/: conversion.py
tests/: __init__.py  conftest.py
tests/integration/: test_api.py
tests/unit/: test_file_service.py  test_repository.py
worker/: __init__.py  celery_app.py  config.py
worker/converters/: __init__.py  pytorch_loader.py
worker/tasks/: __init__.py  conversion_task.py
